# mountainash-data

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  INFRASTRUCTURE_ARCHITECTURE_ANALYSIS.md  LICENSE  MODERNIZATION_SUMMARY.md  README.md  RELEASE.md  TESTING.md  codecov.yml  coverage.toml  environment_local.yml  hatch.toml  pyproject.toml  pyrightconfig.json  pytest.ini  renovate.json  sonar-project.properties
.devcontainer/: clone_repos.sh  devcontainer.json  pyproject.toml
.github/: CODEOWNERS  renovate.json
.github/actions/checkout-dependencies/: action.yml
.github/actions/load-dependencies/: action.yml
.github/config/: mountainash_dependencies.yml
.github/workflows/: build-and-release-package.yml  changelog-generation.yml  greetings.yml  main-release-branch-validation.yml  main-release-build-dependencies.yml  pre-release-build-check.yml  pre-release-pr-validation.yml  python-run-coverage.yml  python-run-pytest-matrix.yml  python-run-pytest.yml  python-run-radon.yml  python-run-ruff.yml  python_run_pytest_matrix.yml
.hiivmind/: github
docs/: PROJECT_OVERVIEW.md  dbt_integration.md  hierachy flattener requirements.md
docs/assets/: package_overview.md
docs/claude_guidance/: MATRIX_TESTING_GUIDE.md  README.md  TESTING_GUIDE_ENHANCEMENT.md
docs/examples/: cross-database-joins.md
docs/hiivmind/: CLAUDE.md
docs/hiivmind/requirements/: adapter_requirements.md
docs/hiivmind/requirements/builder/: hierarchy builder requirements.md
docs/hiivmind/retrospectives/docstrings/: dataframes_ibis_dataframe_docstring_implemented_20250728.md
docs/hiivmind/retrospectives/testing/: testing_retrospective_REAL_VS_MOCK_DEMO.md
docs/superpowers/plans/: 2026-04-07-mountainash-data-audit-and-redesign.md  2026-04-15-settings-audit.md  2026-04-15-settings-registry.md  2026-04-16-profiles-migration-data.md  2026-04-26-legacy-cleanup-final.md  2026-04-27-backend-as-single-handle.md  2026-04-27-settings-aware-backends-to-relation.md  2026-04-27-settings-aware-ibis-backend.md
docs/superpowers/specs/: 2026-04-07-mountainash-data-audit-and-redesign.md  2026-04-15-settings-registry-design.md  2026-04-26-legacy-cleanup-final.md  2026-04-26-to-relation-design.md  2026-04-27-backend-as-single-handle-design.md  2026-04-27-settings-aware-ibis-backend-design.md  2026-05-07-databricks-dialect-design.md
docs/superpowers/specs/2026-04-15-settings-audit/: README.md  bigquery.md  duckdb.md  motherduck.md  mssql.md  mysql.md  postgresql.md  pyiceberg_rest.md  pyspark.md  redshift.md  snowflake.md  sqlite.md  trino.md
notebooks/: db.ipynb  ibis.ipynb  pyarrow.ipynb
settings/: local_auth_settings.env  local_postgres_auth_settings.env  mountainash_acrds_settings.env
src/mountainash_data/: __init__.py  __version__.py  database_utils.py
src/mountainash_data/backends/ibis/: backend.py  connection.py  inspect.py  operations.py
src/mountainash_data/backends/iceberg/: _legacy_connection.py  _legacy_operations.py  _legacy_rest_connection.py  _legacy_rest_operations.py  _types.py  backend.py  connection.py  inspect.py  operations.py
src/mountainash_data/core/: connection.py  constants.py  inspection.py  protocol.py  registry.py  utils.py
src/mountainash_data/core/factories/: __init__.py  base_strategy_factory.py  connection_factory.py  operations_factory.py  settings_factory.py  settings_type_factory_mixin.py
src/mountainash_data/core/settings/: __init__.py  bigquery.py  clickhouse.py  databricks.py  descriptor.py  duckdb.py  exceptions.py  motherduck.py  mssql.py  mysql.py  postgresql.py  profile.py  pyiceberg_rest.py  pyspark.py  redshift.py  registry.py  snowflake.py  sqlite.py  trino.py
src/mountainash_data/databases/: __init__.py  base_db_connection.py  constants.py
src/mountainash_data/databases/connections/: __init__.py  base_db_connection.py  db_connection_factory.py
src/mountainash_data/databases/ibis/: __init__.py  base_ibis_connection.py  constants.py
src/mountainash_data/databases/pyiceberg/: __init__.py  base_pyiceberg_connection.py
src/mountainash_data/databases/settings/: __init__.py  base.py  bigquery.py  duckdb.py  exceptions.py  motherduck.py  mssql.py  mysql.py  postgresql.py  pyiceberg_rest.py  pyspark.py  redshift.py  snowflake.py  sqlite.py  templates.py  trino.py
src/mountainash_data/dataframes/: __init__.py  base_dataframe original.py  base_dataframe.py  ibis_dataframe.py  pandas_dataframe.py  polars_dataframe.py
src/mountainash_data/dataframes/utils/: __init__.py  base_dataframe_strategy.py  dataframe_factory.py  dataframe_functions.py  dataframe_strategy_ibis.py  (+9 more)
src/mountainash_data/factories/: __init__.py  base_strategy_factory.py  connection_factory.py  operations_factory.py  settings_factory.py  settings_type_factory_mixin.py
src/mountainash_data/lineage/: openlineage_helper.py
tests/: CLEANUP_SUMMARY.md  TEST_COVERAGE_UPSERT_INDEXES.md  TEST_SUITE_IMPROVEMENTS.md  conftest.py  fixtures_conftest.py  test_column_filters.py  test_comprehensive_matrix_scenarios.py  test_dataframe_filters.py  test_dataframe_utils.py  test_enhanced_fixtures_demo.py  test_ibis_backends.py  test_polars2.py  test_polars_dataframe.py
tests/column_mapper/: test_column_mapper.py
tests/fixtures/: README.md  __init__.py  data_type_fixtures.py  database_fixtures.py  dataframe_fixtures.py  edge_case_fixtures.py  matrix_testing_fixtures.py  performance_fixtures.py  realistic_data_fixtures.py  sample_data.json  settings_fixtures.py
tests/pydata_converter/: test_pydata_converter.py  test_pydata_converter_complex.py
tests/test_integration/: _test_end_to_end_workflows.py  test_end_to_end_workflows.py
tests/test_unit/: test_database_connections.py  test_database_utils.py  test_dataframe_factory.py  test_lineage.py  test_mountainash_data.py
tests/test_unit/core/: test_inspection.py  test_protocol.py
tests/test_unit/databases/: test_database_connections.py  test_ibis_backends.py
tests/test_unit/dataframes/: test_ibis_dataframe.py  test_polars_dataframe.py
tests/test_unit/factories/: test_connection_factory.py  test_operations_factory.py  test_settings_factory.py
(+154 files in other folders)
