[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mountainash_data"
dynamic = ["version"]
description = 'Mountain Ash - Data'
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "Nathaniel Ramm", email = "nathaniel.ramm@discretedatascience.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "ibis-framework[polars,pandas,sqlite] >= 9.0.0",
  "pandas==2.2.2",
  "polars==0.20.31",
  "universal_pathlib==0.2.2",
  "numpy==1.26.0",
  "pyarrow==15.0.2",
  "openlineage-python==1.17.1"
]


[project.urls]
Documentation = "https://github.com/mountainash-io/mountainash-data#readme"
Issues = "https://github.com/mountainash-io/mountainash-data/issues"
Source = "https://github.com/mountainash-io/mountainash-data"
