[build-system]
requires = ["hatchling"] 
build-backend = "hatchling.build"
       
[project]       
name = "mountainash_data"        
dynamic = ["version"]        
description = 'Mountain Ash - Data'                
readme = "README.md"                    
requires-python = ">=3.10"                 
license = "MIT"              
keywords = []            
authors = [        
  { name = "Nathaniel Ramm", email = "nathaniel.ramm@discretedatascience.com" },     
]         
classifiers = [         
  "Development Status :: 4 - Beta",               
  "Programming Language :: Python",                 
  "Programming Language :: Python :: 3.10",              
  "Programming Language :: Python :: 3.11",         
  "Programming Language :: Python :: Implementation :: CPython",       
  "Programming Language :: Python :: Implementation :: PyPy",        
]           
dependencies = [              
  "ibis-framework[polars,pandas,sqlite,duckdb,pyspark] == 10.4.0",    
  
  # "ibis-framework[mssql,snowflake,bigquery,pyspark,trino] == 10.4.0", 
  "psycopg2-binary==2.9.9",         
  "pyodbc==5.2.0",              
  "snowflake-connector-python==3.12.3",    
   
  "duckdb",                          
  "pyarrow-hotfix>=0.4,<1",   
  "numpy>=1.23.2,<3",     
  "rich>=12.4.4,<14",         
       
  "pandas>=2.2.0",              
  "polars==1.16.0",     
   
  "universal_pathlib==0.2.2",     
  "pyarrow==17.0.0",         
  "openlineage-python==1.17.1",        
  "xarray==2024.11.0",      
  "sqlalchemy"      
]          
    
[project.optional-dependencies] 
all = [ 
  "ibis-framework[mssql,snowflake,bigquery,pyspark,trino] == 10.4.0", 
  "psycopg2-binary==2.9.9",       
  "pyodbc==5.2.0",          
  "snowflake-connector-python==3.12.3",        
]    
mssql = [ 
 "pyodbc==5.2.0",
 "ibis-framework[mssql] == 10.4.0",      
]   
snowflake = [  
  "snowflake-connector-python==3.12.3",      
  "ibis-framework[snowflake] == 10.4.0",        
] 
postgres = [ 
  "psycopg2-binary==2.9.9",
  "ibis-framework[postgres] == 10.4.0",        
]  
   
[project.urls] 
Documentation = "https://github.com/mountainash-io/mountainash-data#readme"
Issues = "https://github.com/mountainash-io/mountainash-data/issues"
Source = "https://github.com/mountainash-io/mountainash-data"
  
#================ 
# Tool: Coverage 
#================
[tool.coverage.run]
source_pkgs = ["mountainash_data", "tests"] 
branch = true
parallel = true   
omit = [ 
  "src/mountainash_data/__version__.py", 
]

[tool.coverage.paths]
mountainash_data = ["src/mountainash_data", "*/mountainash-data/src/mountainash_data"]
tests = ["tests", "*/mountainash-data/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__:",
  "if TYPE_CHECKING:",
]
