[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mountainash_core_build"
# version = "{env:version}"
dynamic = ["version"]
description = 'Mountain Ash - Core Build'
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "Nathaniel Ramm", email = "nathaniel.ramm@discretedatascience.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "pydantic>=2",
  "pydantic-settings",
  "universal_pathlib"
]

[project.urls]
Documentation = "https://github.com/mountainash-io/mountainash-settings#readme"
Issues = "https://github.com/mountainash-io/mountainash-settings/issues"
Source = "https://github.com/mountainash-io/mountainash-settings"


[tool.hatch.version]
path = "src/mountainash_core_build/__version__.py"


# Coverage Parameters
[tool.coverage.run]
source_pkgs = ["mountainash_core_build", "tests"]
branch = true
parallel = true
omit = [
  "src/mountainash_core_build/__version__.py",
]

[tool.coverage.paths]
mountainash_settings = ["src/mountainash_core_build", "*/mountainash-core-build/src/mountainash_core_build"]
tests = ["tests", "*/mountainash_core_build/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__:",
  "if TYPE_CHECKING:",
]

# [tool.hatch.build.hooks.version]
# pre = "python -m mountainash_core_build.version"


[tool.hatch.build.targets.wheel]
packages = ["src/mountainash_core_build",
# "{root:uri}/../mountainash_core_build/wheels/{env:MOUNTAINASH_BUILD_VERSION}/mountainash_acrds_constants-{env:MOUNTAINASH_BUILD_VERSION}-py3-none-any.whl",
# "{root:uri}/../mountainash_core_build/wheels/{env:MOUNTAINASH_BUILD_VERSION}/mountainash_acrds_core-{env:MOUNTAINASH_BUILD_VERSION}-py3-none-any.whl",
# "{root:uri}/../mountainash_core_build/wheels/{env:MOUNTAINASH_BUILD_VERSION}/mountainash_acrds_datacontracts-{env:MOUNTAINASH_BUILD_VERSION}-py3-none-any.whl",
# "{root:uri}/../mountainash_core_build/wheels/{env:MOUNTAINASH_BUILD_VERSION}/mountainash_acrds_orchestration-{env:MOUNTAINASH_BUILD_VERSION}-py3-none-any.whl",
# "{root:uri}/../mountainash_core_build/wheels/{env:MOUNTAINASH_BUILD_VERSION}/mountainash_acrds_settings-{env:MOUNTAINASH_BUILD_VERSION}-py3-none-any.whl",
# "{root:uri}/../mountainash_core_build/wheels/{env:MOUNTAINASH_BUILD_VERSION}/mountainash_acrds_syntheticdata-{env:MOUNTAINASH_BUILD_VERSION}-py3-none-any.whl",
# "{root:uri}/../mountainash_core_build/wheels/{env:MOUNTAINASH_BUILD_VERSION}/mountainash_auth_settings-{env:MOUNTAINASH_BUILD_VERSION}-py3-none-any.whl",
# "{root:uri}/../mountainash_core_build/wheels/{env:MOUNTAINASH_BUILD_VERSION}/mountainash_constants-{env:MOUNTAINASH_BUILD_VERSION}-py3-none-any.whl",
# "{root:uri}/../mountainash_core_build/wheels/{env:MOUNTAINASH_BUILD_VERSION}/mountainash_settings-{env:MOUNTAINASH_BUILD_VERSION}-py3-none-any.whl",
# "{root:uri}/../mountainash_core_build/wheels/{env:MOUNTAINASH_BUILD_VERSION}/mountainash_syntheticdata-{env:MOUNTAINASH_BUILD_VERSION}-py3-none-any.whl",
# "{root:uri}/../mountainash_core_build/wheels/{env:MOUNTAINASH_BUILD_VERSION}/mountainash_utils-{env:MOUNTAINASH_BUILD_VERSION}-py3-none-any.whl",
# "{root:uri}/../mountainash_core_build/wheels/{env:MOUNTAINASH_BUILD_VERSION}/mountainash_utils_dataclasses-{env:MOUNTAINASH_BUILD_VERSION}-py3-none-any.whl",
# "{root:uri}/../mountainash_core_build/wheels/{env:MOUNTAINASH_BUILD_VERSION}/mountainash_utils_dataframes-{env:MOUNTAINASH_BUILD_VERSION}-py3-none-any.whl",
# "{root:uri}/../mountainash_core_build/wheels/{env:MOUNTAINASH_BUILD_VERSION}/mountainash_utils_files-{env:MOUNTAINASH_BUILD_VERSION}-py3-none-any.whl",
]

# [tool.hatch.envs.dependencies]
# packages = [
#     "wheels/{env:MOUNTAINASH_BUILD_VERSION}/mountainash_acrds_constants-{env:MOUNTAINASH_BUILD_VERSION}-py3-none-any.whl",
#     # Add more wheel files here
# ]